<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SelfPos</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_eat_method">请选择就餐方式</string>
    <string name="please_choose">请选择</string>
    <string name="clear_shop_cart">清空购物车</string>
    <string name="total">应收</string>
    <string name="total2">总计&#160;:</string>
    <string name="comfirm_order">确认订单</string>
    <string name="shopping_cart">我的订单</string>
    <string name="pay_method">请选择支付方式</string>
    <string name="coupon_type">满减券</string>
    <string name="coupon_deadline_time">有效期</string>
    <string name="zhushi">主食</string>
    <string name="ourrecomend">我们推荐</string>
    <string name="coupons">代金券</string>
    <string name="choose_system">请选择您使用的系统</string>
    <string name="sync_system">同步时</string>
    <string name="smarant_system">智慧快餐</string>
    <string name="canxingjian_system">餐行健</string>
    <string name="inner_printer_set">打印机类型</string>
    <string name="printticket_type">打印机小票类型</string>

    <!-- 2017.11.07 多语言 -->
    <string name="system_name">智慧快餐</string>
    <string name="system_set">系统设置</string>
    <string name="bind_terminal">绑定终端</string>
    <string name="current_environment">当前环境</string>
    <string name="upload_logs">日志上传</string>
    <string name="clear_cache">清除缓存和日志</string>
    <string name="choose_printer">打印机选择</string>
    <string name="the_first_printer">一代打印机</string>
    <string name="the_second_printer">二代打印机</string>
    <string name="printer_set">打印机设置</string>
    <string name="init_barcode_scanning_gun">初始化扫码枪</string>
    <string name="choose_paytype">支付方式</string>
    <string name="sync_headquarter_data">同步总部数据</string>
    <string name="sync_local_data">同步本地数据</string>
    <string name="show_table_num">是否显示餐牌号</string>
    <string name="show_banner_or_video">显示轮播图</string>
    <string name="bind_status">未绑定</string>
    <string name="back">返回</string>
    <string name="jiyejia_host_ip">吉野家服务器地址,点击编辑例(http://192.168.1.136:9090)</string>
    <string name="canxingjian_host_ip">餐行健服务器地址,点击编辑 例(192.168.1.136)</string>
    <string name="update_version">版本更新</string>
    <string name="no_newversion">当前已是最新版本</string>

    <string name="download_video">下载视频</string>
    <string name="login_out">退出程序</string>
    <string name="take_in">堂&#160;食</string>
    <string name="take_out">外&#160;带</string>
    <string name="memberlogin_tip">会员验证登录</string>
    <string name="memberlogin_tip1">➀进入微信公众号选择[我的卡]</string>
    <string name="sync_memberlogin_tip1">➀使用微信扫描上方二维码进入会员页</string>
    <string name="memberlogin_tip2">➁点选[我的二维码]</string>
    <string name="sync_memberlogin_tip2">➁点选会员页下方的[付款]生成会员二维码</string>
    <string name="memberlogin_tip3">➂将二维码对准[左下方]扫码区</string>
    <string name="sync_memberlogin_tip3">➂将二维码对准[左下方]扫码区</string>
    <string name="memberlogin_tip4">➃扫码完成</string>
    <string name="sync_memberlogin_tip4">➃扫码即可完成会员登录</string>
    <string name="member_login_tip5">请扫会员二维码或输入会员卡号/手机号</string>
    <string name="sync_member_login_tip5">请扫会员二维码或输入会员卡号/手机号</string>
    <string name="not_a_member">非会员</string>
    <string name="phone_login">使用手机号登录</string>
    <string name="input_table_num">餐牌号</string>
    <string name="input_complete">完成</string>
    <string name="delete_tv">删除</string>
    <string name="clear_input">清空</string>
    <string name="preference_info">优惠信息</string>
    <string name="welcome">欢迎&#160;</string>
    <string name="youhava">您有&#160;</string>
    <string name="_coupons">&#160;张优惠券</string>
    <string name="jifen_left">积分余额&#160;</string>
    <string name="chuzhi_left">储值余额&#160;</string>
    <string name="colon"> :</string>
    <string name="_preference">种优惠</string>
    <string name="pay_tip">支付步骤</string>
    <!--支付宝-->
    <string name="pay_tip1">① 点击付钱，弹出付款码</string>
    <!--微信-->
    <string name="pay_tip11">① 点击收付款，弹出付款码</string>
    <string name="pay_tip2">② 将付款码对准扫码区</string>
    <string name="pay_tip3">③ 取走小票，完成支付</string>
    <string name="cancle">取消</string>
    <string name="printticket">补打小票</string>
    <string name="preference_tv">优惠</string>
    <string name="eat_method">就餐方式</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="member_pay">会员支付</string>
    <string name="pay_success">支付成功</string>
    <string name="wait_a_minute">请稍后...</string>
    <string name="generating_list">正在努力为您生成取餐号</string>
    <string name="inform_kitchen">正在通知厨房</string>
    <string name="member_login">会员登录</string>
    <string name="new_version">有新版本</string>
    <string name="current_version">当前版本</string>
    <string name="bind_error">终端已经被解绑定，请重新绑定终端！</string>
    <string name="un_bind">解除绑定</string>
    <string name="un_bind2">解绑</string>
    <string name="bind1">绑定</string>
    <string name="nobind">未绑定</string>
    <string name="credit_card_payment">刷卡支付</string>
    <string name="sweep_the_code_to_pay">扫码支付</string>
    <string name="nomore_cache">没有需要清理的缓存和日志</string>
    <string name="working">正在处理中，请稍后!</string>
    <string name="file_exist">文件已存在!</string>
    <string name="down_success">下载完成!</string>
    <string name="delete_success">删除完成</string>
    <string name="nomore_logs_tips1">没有今天的日志</string>
    <string name="nomore_logs_tips2">没有昨天的日志</string>
    <string name="nomore_logs_tips3">没有前天的日志</string>
    <string name="nomore_logs_tips4">没有日志</string>
    <string name="unbind_success">解绑成功</string>
    <string name="net_error">网络错误,请检查网络连接是否正常!</string>
    <string name="code_error">后台异常错误，请联系工作人员!</string>
    <string name="bind_success">绑定成功</string>
    <string name="hasbind">已绑定</string>
    <string name="member_login_fail">会员登录失败</string>
    <string name="input_pwd_tip">请输入密码</string>
    <string name="nomore_dishes">菜品数据为空</string>
    <string name="qrcode_error">二维码内容不存在</string>
    <string name="shopping_cart_empty">购物车为空</string>
    <string name="original_price">原价:&#160;￥</string>
    <string name="flavor_price">已优惠:&#160;￥</string>
    <string name="current_price">现价:&#160;￥</string>
    <!--<string name="select_attheleast">最少选</string>-->
    <!--<string name="select_atmost">最多选</string>-->

    <string name="use_inside">内设扫码枪</string>
    <string name="use_outside">外接扫码枪</string>
    <string name="scanguntype">扫码枪类型</string>
    <string name="please_input">请输入</string>
    <string name="save">保存</string>
    <string name="select_language">选择语言</string>
    <string name="table_number_range">餐牌号范围:</string>
    <string name="table_num_tv">餐牌号</string>
    <string name="gopay">结账</string>
    <string name="scroll_to_top">已经到顶了哦...</string>
    <string name="scroll_to_bottom">已经到底了哦...</string>
    <string name="select_ok">选好了</string>
    <string name="selected">已选</string>
    <string name="zuofaxuanze">做法选择</string>
    <string name="select_tips">请按要求选择&#160;</string>
    <string name="pay_input_pwd_tips">请输入支付密码</string>
    <string name="ali_pay_tips">支付宝支付步骤</string>
    <string name="wechat_pay_tips">微信支付步骤</string>
    <string name="trading">交易正在进行中,请稍后</string>
    <string name="pay_fail">支付失败</string>
    <string name="generate_qrcode_fail">生成二维码失败</string>
    <string name="cardnum_tv">取餐号</string>
    <string name="order_num_tv">订单号:</string>
    <string name="order_time_tv">下单时间:</string>
    <string name="paying">支付正在处理中，请稍后...</string>
    <string name="comfirm">确认</string>
    <string name="download">立刻下载</string>
    <string name="latter">稍后再说</string>
    <string name="checkOrder">检查订单</string>
    <string name="caipinquan">菜品券</string>
    <string name="timeout">与服务器连接超时，请稍后重试!</string>
    <string name="showtable_paysuccess_tips">请找好座位，等待服务员送餐</string>



    <string-array name="scantype">
        <item>@string/use_inside</item>
        <item>@string/use_outside</item>
    </string-array>

    <string-array name="innerprinter">
        <item>普通打印机</item>
        <item>新北洋打印机</item>
    </string-array>

    <string-array name="paydata">
        <item>@string/credit_card_payment</item>
        <item>@string/sweep_the_code_to_pay</item>
    </string-array>
    <string-array name="showbanner">
        <item>显示轮播图</item>
        <item>显示视频</item>
    </string-array>

    <string-array name="printdata">
        <item>@string/the_second_printer</item>
    </string-array>

    <string-array name="urldata">
        <item>深圳测试环境</item>
        <item>深圳正式环境</item>
        <item>同步时测试环境</item>
        <item>同步时正式环境</item>
    </string-array>

    <string-array name="uploadfileday">
        <item>今天日志</item>
        <item>昨天日志</item>
        <item>前天日志</item>
    </string-array>

    <string-array name="ifshowtable">
        <item>不显示</item>
        <item>显示</item>
    </string-array>


    <string-array name="textviewtype">
        <item>文字滚动</item>
        <item>文字不滚动</item>
    </string-array>


    <string-array name="printtickettype">
        <item>80格式</item>
        <item>58格式</item>
    </string-array>


    <string-array name="validate_member">
        <item>可以</item>
        <item>不可以</item>
    </string-array>
    <string-array name="start_call_number">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>

    </string-array>
    <string-array name="language">
        <item>简体中文</item>
        <item>英文</item>
    </string-array>

</resources>