<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@mipmap/logo"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/gray_deep"
        android:visibility="gone"/>

    <android.support.v7.widget.CardView
        android:id="@+id/smarant_system"
        android:layout_width="@dimen/x300"
        android:layout_height="@dimen/y100"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/smarant_system"
            android:textColor="@color/gray_deep"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/sync_system"
        android:layout_width="@dimen/x300"
        android:layout_height="@dimen/y100"
        android:layout_marginTop="@dimen/y30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/sync_system"
            android:textColor="@color/gray_deep"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/canxingjian_system"
        android:layout_width="@dimen/x300"
        android:layout_height="@dimen/y100"
        android:layout_marginTop="@dimen/y30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/canxingjian_system"
            android:textColor="@color/gray_deep"/>
    </android.support.v7.widget.CardView>
</LinearLayout>

