<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_color_white_with_5px_color_black_stroke"
              android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y20"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/new_version"
        android:textColor="@color/black"
        android:textSize="@dimen/x40"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:maxEms="15"
        android:paddingBottom="15dp"
        android:paddingTop="@dimen/y10"
        android:text="自助点餐机新版本来了，口碑首页更丰富，专属优惠更懂你，马上体验！"
        android:textColor="#111111"
        android:textSize="@dimen/x30"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y50"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginTop="@dimen/y20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x10"
            android:layout_weight="1"
            android:background="@color/gray"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="@dimen/y20"
            android:paddingTop="@dimen/y20"
            android:text="@string/latter"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/x38"/>


        <TextView
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x10"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="@dimen/y20"
            android:paddingTop="@dimen/y20"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="@dimen/x38"/>
    </LinearLayout>

</LinearLayout>