<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/eatmethod_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/y200"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logo"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fra_main_method_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/x50"
            android:text="@string/choose_eat_method"
            android:textColor="@color/white"
            android:textSize="@dimen/x100"
            />

        <android.support.v7.widget.CardView
            android:id="@+id/btn_takein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x20"
            android:foreground="?android:selectableItemBackground"
            app:cardBackgroundColor="@color/deep_transparent"
            app:cardCornerRadius="@dimen/x10"
            app:cardElevation="@dimen/x4">

            <TextView
                android:id="@+id/tv_takein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/x30"
                android:text="@string/take_in"
                android:textColor="#FFF"
                android:textSize="@dimen/x150"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_takeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x20"
            android:foreground="?android:selectableItemBackground"
            app:cardBackgroundColor="@color/deep_transparent"
            app:cardCornerRadius="@dimen/x10"
            app:cardElevation="@dimen/x4">

            <TextView
                android:id="@+id/tv_takeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/x30"
                android:text="@string/take_out"
                android:textColor="#FFF"
                android:textSize="@dimen/x150"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/main_color_white"
        android:layout_marginBottom="@dimen/y118"
        android:layout_marginRight="@dimen/x10"/>

    <ImageView
        android:id="@+id/fra_main_tel_iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y118"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
